// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.29.0

package sqlc

import (
	"github.com/jackc/pgx/v5/pgtype"
)

type User struct {
	ID             pgtype.UUID
	UserName       string
	Email          string
	MaxDocuments   pgtype.Int4
	HashedPassword string
	IsActive       pgtype.Bool
	CreatedAt      pgtype.Timestamp
	LastModified   pgtype.Timestamp
}
